# robotics-project

./: CMakeLists.txt  README.md  package.xml
config/: gz_bridge.yaml
description/: gazebo_control.xacro  lidar.xacro  robot_core.xacro
launch/: launch_sim.launch.py  rsp.launch.py
robotics-project/config/: gz_bridge.yaml  localization_params_online_async.yaml  my_controllers.yaml  nav2_params.yaml  twist_mux.yaml
robotics-project/description/: gazebo_control.xacro  gazebo_simulation_bot_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  robot_simulation_core.xacro  ros2_control.xacro
robotics-project/launch/: launch_robot.launch.py  launch_sim.launch.py  localization.launch.py  navigation.launch.py  online_async.launch.py  rsp.launch.py
robotics-project/worlds/: Empty.sdf  obstacles.world
vex-vscode-projects/TestProject/src/: main.py
vex_control/: CMakeLists.txt  package.xml  vex_control.xml
vex_control/bringup/launch/: diffbot.launch.py
vex_control/description/launch/: view_robot.launch.py
vex_control/description/ros2_control/: diffbot.ros2_control.xacro
vex_control/description/urdf/: diffbot.urdf.xacro
vex_control/src/: vex_control.cpp
vex_control/src/include/vex_control/: vex_comms.hpp  vex_system.hpp  visibility_control.h  wheel.hpp
vex_interface/src/: main.py
worlds/: Empty.sdf  empty.world
